Fixed the issue of when the info icon overlaps with words

--- a/styles.css
+++ b/styles.css
@@ -105,4 +105,21 @@ h1 {
   .time {
     font-size: 1.2rem;
   }
+
+@media (max-width: 600px) {
+  .icon {
+    top: 10px;
+    right: 10px;
+    transform: scale(0.8);
+  }
+
+  h1 {
+    font-size: 1.4em;
+    padding: 0 20px;
+  }
+
+  #gmt3,
+  #local {
+    font-size: 18px;
+  }
 }
